# MiniHTMLTokenizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: error.h  output.h  token.h
src/: main.cpp  output.cpp  tokenizer.cpp  tokenizer.h
tests/: tokenizer_tests.cpp
tests/fixtures/: not_html.txt  valid_basic.html
